# rboard

./: .gitignore  App.axaml  App.axaml.cs  LICENSE.txt  Logger.cs  Logic.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  app.manifest  docs.docx  docs.odt  icon.xcf  main.py  rboard.csproj
.github/workflows/: dotnet-desktop.yml
Logic/: CHANGELOG.md  ChessLogic.cabal  LICENSE
Logic/app/: Main.hs
Logic/src/: Chess.hs
Logic/test/: Main.hs
windows/: rboard  rboard.deps.json
